--- a/src/Maximum Possible Return on Equity.ipynb
+++ b/src/Maximum Possible Return on Equity.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "bcf497bc",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4466bda2",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f0e9b912",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "WindowsPath('C:/Users/user/.cache/kagglehub/datasets/sbgonenc96/2000-2024-stocks-data/versions/36')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "27d0aed8",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ad5e84e5",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4922d7d1",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        " WindowsPath('C:/Users/user/.cache/kagglehub/datasets/sbgonenc96/2000-2024-stocks-data/versions/36/C.json/C_merged.json')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "00982cd7",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "556b1253",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "dict_keys(['ticker', 'queryCount', 'resultsCount', 'adjusted', 'results', 'status', 'request_id', 'count'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9eb2a7fe",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "4   700000  0.0001  0.0001  0.0002  1661959800000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8c4673ca",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "2024-08-23 18:00:00   500000  0.0001  0.000050  0.000050"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bb1ca9d7",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "Name: vwap, Length: 874, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "bda31da0",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "7955c1fc",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "b87cad03",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "95578613",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "[874 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "a7d0098c",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "e0b24f5d",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "Name: close, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "6ab190a6",
    "metadata": {},
    "outputs": [],
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "b5785438",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
        "Name: close, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "24aa62a3",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "6926b36c",
    "metadata": {},
    "outputs": [
@@ -828,15 +828,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 26/26 [04:16<00:00,  9.87s/it]"
+      "100%|██████████████████████████████████████████████████████████████████████| 26/26 [04:06<00:00,  9.47s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4min 12s\n",
-      "Wall time: 4min 16s\n"
+      "CPU times: total: 4min\n",
+      "Wall time: 4min 6s\n"
      ]
     },
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "7d50bf97",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
        " WindowsPath('C:/Users/user/OneDrive/STOCKS/Research & Reference/nb/max possible return on equity/src/data/C_qualified.pkl')]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "2f84e77c",
    "metadata": {},
    "outputs": [
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "3dd99a11",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
        "[5 rows x 1196 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "a095efd2",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "cff300ec",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "5d158a4d",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
        "AACAY               True        0.026025                   True"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "4fdf8743",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "8125532e",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1450,7 @@
        "False                                        9400"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "5575cbc1",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "id": "1e2a5947",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "105 ms ± 2.21 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "102 ms ± 687 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "id": "0512b74d",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "623 ms ± 25.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "573 ms ± 6.68 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "id": "de3cc3c2",
    "metadata": {},
    "outputs": [],
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "c742ce35",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1584,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "821 ms ± 28.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "767 ms ± 9.42 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "id": "00402f1f",
    "metadata": {},
    "outputs": [],
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "id": "d6256c6c",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_3760\\628235894.py:7: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8784\\628235894.py:7: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  timestamps = pd.date_range('2023-01-01', periods=n_periods, freq='H')\n"
      ]
     },
@@ -1663,7 +1663,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1672542000000</td>\n",
-       "      <td>0.200317</td>\n",
+       "      <td>0.902052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1679,11 +1679,11 @@
        "0  1672531200000         0\n",
        "1  1672534800000         0\n",
        "2  1672538400000         0\n",
-       "3  1672542000000  0.200317\n",
+       "3  1672542000000  0.902052\n",
        "4  1672545600000         0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "998ad5d2",
    "metadata": {},
    "outputs": [],
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "dc47fb08",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1727,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104 ms ± 6 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "97.9 ms ± 3.23 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "5416fc38",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.3 ms ± 757 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "29.3 ms ± 622 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "cb890b5e",
    "metadata": {},
    "outputs": [],
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "id": "15b5743c",
    "metadata": {},
    "outputs": [
@@ -1777,7 +1777,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "745 µs ± 30.6 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "719 µs ± 22 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "id": "89a00a26",
    "metadata": {},
    "outputs": [
@@ -1798,7 +1798,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "506 µs ± 36.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "428 µs ± 7.54 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
