--- a/src/2 - Simulation - Max Possible Return on Equity.ipynb
+++ b/src/2 - Simulation - Max Possible Return on Equity.ipynb
@@ -18,7 +18,11 @@
     "\n",
     "__Secondary Objectives:__\n",
     "* explore 'return/bar' as a performance metric\n",
-    "* understand distributions and possible application of 'return/bar'"
+    "* understand distributions and possible application of 'return/bar'\n",
+    "\n",
+    "Author:  Matt Chmielewski<BR>\n",
+    "https://github.com/emskiphoto/Max-Possible-Return-from-Equities/tree/main<BR>\n",
+    "January 20, 2025"
    ]
   },
   {
